--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -22,10 +22,19 @@
           <label for="mantenimiento">Mantenimiento</label>
           <ul class="nav-list">
             <li>
-              <a routerLink="./mantenimiento/solicitud"
-                 class="nav-link" routerLinkActive="active">Crear Solicitud de Servicio</a>
+              <a routerLink="./mantenimiento/solicitud/lista-solicitud-servicio"
+                 class="nav-link" routerLinkActive="active">Solicitud de Servicio</a>
             </li>
-            <li><a class="nav-link" routerLinkActive="active">Orden Trabajo</a></li>
+            <li>
+              <a routerLink="./mantenimiento/orden-trabajo/crear-orden-trabajo"
+                 class="nav-link" routerLinkActive="active">Orden Trabajo
+              </a>
+            </li>
+            <li>
+              <a routerLink="./mantenimiento/repuestos/lista-solicitud-repuesto"
+                 class="nav-link" routerLinkActive="active">Solicitud Repuestos
+              </a>
+            </li>
           </ul>
         </section>
         <a class="nav-link">
