--- a/client-app/src/app/shared/modelo-equipo/modelo-equipo.component.html
+++ b/client-app/src/app/shared/modelo-equipo/modelo-equipo.component.html
@@ -1,6 +1,6 @@
 <!--Modal para agregar o editar los datos del modelo del equipo -->
 <clr-modal [(clrModalOpen)]="modalModeloOpen" [clrModalClosable]="false">
-  <h3 class="modal-title form-modelo-equipo-title">{{modalModeloTitle}}</h3>
+  <h2 class="modal-title form-modelo-equipo-title">{{modalModeloTitle}}</h2>
   <div class="modal-body">
     <form class="compact" #modeloEquipoForm="ngForm">
       <section class="form-block">
@@ -41,13 +41,13 @@
     <button class="btn btn-outline btn-sm" type="button"
             (click)="onCancelAddEditModeloEquipo()">
       <clr-icon shape="window-close"></clr-icon>
-      Cancel
+      Cancelar
     </button>
     <button class="btn btn-success btn-sm" type="button"
             (click)="addModeloEquipo()"
             [disabled]="(modeloEquipoForm.form.invalid)">
       <clr-icon shape="check"></clr-icon>
-      Add
+      Crear
     </button>
   </div>
 </clr-modal>
