--- a/client-app/src/app/home/equipo/add-equipo/add-equipo.component.css
+++ b/client-app/src/app/home/equipo/add-equipo/add-equipo.component.css
@@ -1,39 +1,39 @@
 .form-add-equipo-title {
-    font-weight: bold;
-    font-size: 24px;
-    text-align: center;
+  font-weight: bold;
+  text-align: center;
 }
 
 .form-add-equipo-label {
-    font-weight: bold !important;
+  font-weight: bold !important;
 }
 
 .col-btn-add-equipo {
-    margin-left: -18px !important;
+  margin-left: -18px !important;
 }
 
 >>> .ui-dropdown {
-    border: 1px solid rgba(34, 36, 38, 0.50) !important;
-    border-radius: 0 !important;
-    border-image: initial !important;
-    -webkit-appearance: menulist !important;
-    width: 100% !important;
-    height: 35px !important;
-    display: block;
+  border: 1px solid rgba(34, 36, 38, 0.50) !important;
+  border-radius: 0 !important;
+  border-image: initial !important;
+  -webkit-appearance: menulist !important;
+  width: 100% !important;
+  height: 35px !important;
+  /*display: block;*/
+  display: contents !important;
 }
 
 .select .select-form-add-equipo {
-    border: 1px solid rgba(34, 36, 38, 0.50) !important;
-    border-radius: 0 !important;
-    border-image: initial !important;
-    -webkit-appearance: menulist !important;
-    align-items: center !important;
-    background-color: white !important;
-    cursor: default;
-    background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
-    height: 30px !important;
-    margin-left: 1% !important;
-    width: 100% !important;
-    display: block;
+  border: 1px solid rgba(34, 36, 38, 0.50) !important;
+  border-radius: 0 !important;
+  border-image: initial !important;
+  -webkit-appearance: menulist !important;
+  align-items: center !important;
+  background-color: white !important;
+  cursor: default;
+  background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
+  height: 30px !important;
+  margin-left: 1% !important;
+  width: 100% !important;
+  display: block;
 }
 
