--- a/client-app/src/app/home/mantenimiento/solicitud/solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud/solicitud.component.html
@@ -1,153 +1,1 @@
-<form class=" compact" *ngIf="!showFormAbmSolicitud && !openOrdenTrabajo">
-  <h5 class="form-solicitud-title">Solicitud de Servicio</h5>
-  <section>
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-1">
-        <button class="btn btn-sm btn-success"
-                (click)="addSolicitud()">
-          <clr-icon shape="plus"></clr-icon>
-          Add
-        </button>
-      </div>
-      <div class="col-xs-1">
-        <button class="btn btn-sm btn-success"
-                *ngIf="selectedSolicitud"
-                (click)="editSolicitud()">
-          <clr-icon shape="pencil"></clr-icon>
-          Edit
-        </button>
-      </div>
-      <!--<div class="col-xs-2">-->
-      <!--<button class="btn btn-sm btn-warning"-->
-      <!--*ngIf="selectedSolicitud"-->
-      <!--(click)="deleteSolicitud()">-->
-      <!--<clr-icon shape="trash"></clr-icon>-->
-      <!--Delete-->
-      <!--</button>-->
-      <!--</div>-->
-      <!--<div class="col-xs-4"></div>-->
-      <!--<div class="col-xs-1">-->
-        <!--<label class="form-solicitud-label"-->
-               <!--for="select_tipoSolicitud">Solicitud:</label>-->
-      <!--</div>-->
-      <!--<div class="col-xs-2">-->
-        <!--<div class="select">-->
-          <!--<select id="select_tipoSolicitud" #selectTipoSolicitud name="solicitud"-->
-                  <!--[(ngModel)]="tipoSolicitud"-->
-                  <!--(change)="seleccionarTipoSolicitud(selectTipoSolicitud.value)">-->
-            <!--<option>servicio</option>-->
-            <!--<option>repuesto</option>-->
-          <!--</select>-->
-        <!--</div>-->
-      <!--</div>-->
-    </div>
-    <!--success action-->
-    <div class="alert alert-success alert-sm" *ngIf="success">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon"
-                      shape="check-circle">
-            </clr-icon>
-          </div>
-          <span class="alert-text">
-            {{ successMessage }}
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!-- errors -->
-    <div class="alert alert-danger alert-sm" *ngIf="error">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon"
-                      shape="exclamation-circle">
-            </clr-icon>
-          </div>
-          <span class="alert-text">{{errorMessage}}</span>
-        </div>
-      </div>
-      <button type="button" class="close" aria-label="Close"
-              (click)="error = false">
-        <clr-icon aria-hidden="true" shape="close"></clr-icon>
-      </button>
-    </div>
-    <!--lista de solicitudes de servicios-->
-    <clr-datagrid [clrDgLoading]="loading">
-      <clr-dg-column [clrDgSortBy]="'id'">ID</clr-dg-column>
-      <clr-dg-column>Estado</clr-dg-column>
-      <clr-dg-column>Tarea</clr-dg-column>
-      <clr-dg-column>Responsable</clr-dg-column>
-      <clr-dg-column>Fecha</clr-dg-column>
-      <clr-dg-column>Acción</clr-dg-column>
-      <clr-dg-placeholder>
-        <div *ngIf="solicitudServicios && solicitudServicios.length === 0">
-          No existen datos para la Solicitud
-        </div>
-      </clr-dg-placeholder>
-      <clr-dg-row *ngFor="let solicitud of solicitudServicios"
-                  (click)="selectSolicitudServicio(solicitud)"
-                  [class.selectSolicitud]="solicitud === selectedSolicitudServicio">
-        <clr-dg-cell>{{solicitud.id}}</clr-dg-cell>
-        <clr-dg-cell>{{solicitud.estado}}</clr-dg-cell> <!--estado del equipo-->
-        <clr-dg-cell>{{solicitud.descripcionProblema}}</clr-dg-cell>
-        <clr-dg-cell>{{solicitud.personalReporte}}</clr-dg-cell>
-        <clr-dg-cell>{{solicitud.fechaSolicitud}}</clr-dg-cell>
-        <clr-dg-cell>
-          <button class="btn btn-sm btn-success" (click)="atenderSolicitud()">
-            Atender
-          </button>
-        </clr-dg-cell>
-      </clr-dg-row>
-
-      <clr-dg-footer>
-        {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-        of {{total}} Solicitudes
-        <clr-dg-pagination #pagination [clrDgPageSize]="5" [clrDgTotalItems]="total"></clr-dg-pagination>
-      </clr-dg-footer>
-    </clr-datagrid>
-
-    <!--lista de solicitudes de repuestos-->
-    <!--<clr-datagrid *ngIf="!showSolicitudServicio" [clrDgLoading]="loading">-->
-      <!--<clr-dg-column [clrDgSortBy]="'id'">ID</clr-dg-column>-->
-      <!--<clr-dg-column>Estado</clr-dg-column> &lt;!&ndash;estado del equipo&ndash;&gt;-->
-      <!--<clr-dg-column>Repuestos</clr-dg-column>-->
-      <!--<clr-dg-column>Fecha</clr-dg-column>-->
-
-      <!--<clr-dg-row *ngFor="let solicitud of solicitudRepuestos"-->
-                  <!--(click)="selectSolicitudRepuesto(solicitud)"-->
-                  <!--[class.selectSolicitud]="solicitud === selectedSolicitudRepuesto">-->
-        <!--<clr-dg-cell>{{solicitud.id}}</clr-dg-cell>-->
-        <!--<clr-dg-cell>{{solicitud.estado}}</clr-dg-cell>-->
-        <!--<clr-dg-cell>-->
-          <!--<ul class="list-unstyled" *ngFor="let repuesto of solicitud.repuestos">-->
-            <!--<li>{{repuesto.descripcionArticulo}}</li>-->
-          <!--</ul>-->
-        <!--</clr-dg-cell>-->
-        <!--<clr-dg-cell>{{solicitud.fechaSolicitud}}</clr-dg-cell>-->
-      <!--</clr-dg-row>-->
-
-      <!--<clr-dg-footer>-->
-        <!--{{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}-->
-        <!--of {{total}} Solicitudes-->
-        <!--<clr-dg-pagination #pagination [clrDgPageSize]="5" [clrDgTotalItems]="total"></clr-dg-pagination>-->
-      <!--</clr-dg-footer>-->
-    <!--</clr-datagrid>-->
-  </section>
-</form>
-
-<!--agregar/editar solicitud de servicio-->
-<!--<app-add-edit-solicitud-servicio-->
-  <!--*ngIf="showFormAbmSolicitud"-->
-  <!--[solicitudServicio]='selectedSolicitudServicio'-->
-  <!--[tituloForm]='formtitle'-->
-  <!--[isEdit]="isEdit"-->
-  <!--[selectedSolicitudServicio]='selectedSolicitudServicio'-->
-  <!--(onCanceled)="onCancelAddEditSolicitud($event)"-->
-  <!--(onFinished)="onCloseAddEditSolicitud($event)">-->
-<!--</app-add-edit-solicitud-servicio>-->
-
-<!--Crear Orden de trabajo-->
-<app-add-orden-trabajo *ngIf="openOrdenTrabajo"></app-add-orden-trabajo>
+<router-outlet></router-outlet>
