--- a/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
+++ b/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
@@ -106,34 +106,9 @@
       <div class="col-xs-2 col-label-add-contrato">
         <label class="form-add-contrato-label required">Representante:</label>
       </div>
-
-      <div class="col-xs-5" *ngIf="representantes != null && representantes.length > 0">
-        <p-dropdown [options]="representantes" name="repre"
-                    [(ngModel)]="repreSeleccionado" optionLabel="nombre"
-                    (onChange)="onSelectedRepresentante($event)">
-        </p-dropdown>
-      </div>
-      <div class="col-xs-5" *ngIf="representantes == null || representantes.length == 0">
-        <div class="select form-control">
-          <select class="select-form-contrato" id="repre" disabled>
-            <option disabled>Agregar Representante</option>
-          </select>
-        </div>
-      </div>
-
-      <div *ngIf="!isEditRepre" class="col-xs-1 btn-add-representante">
-        <button class="btn-add-repre btn btn-sm btn-success"
-                (click)="addNewRepresentante()">
-          <clr-icon shape="user"></clr-icon>
-          Add
-        </button>
-      </div>
-      <div *ngIf="isEditRepre" class="col-xs-1 btn-add-representante">
-        <button class="btn-add-repre btn btn-sm btn-success"
-                (click)="editRepresentante()">
-          <clr-icon shape="user"></clr-icon>
-          Edit
-        </button>
+      <div class="col-xs-5">
+        <input class="form-control" id="representante" required
+               name="representante" [(ngModel)]="representante">
       </div>
     </div>
 
@@ -209,12 +184,3 @@
     </button>
   </section>
 </form>
-
-
-<!--Modal para agregar o editar los datos de un representante-->
-<app-representante *ngIf="modalAddEditRepreOpen"
-                   [representante]="repreSeleccionado"
-                   [isEditRepre]="isEditRepre"
-                   (representanteToUpdate)="addEditRepresentante($event)"
-                   (cancelAddEditRepre)="onCancelAddEditRepresentante($event)">
-</app-representante>
