--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -107,19 +107,9 @@
         <label class="form-edit-contrato-label required">Representante:</label>
       </div>
 
-      <div class="col-xs-5" *ngIf="representantes != null && representantes.length > 0">
-        <p-dropdown [options]="representantes" name="repre"
-                    [(ngModel)]="repreSeleccionado" optionLabel="nombre"
-        (onChange)="onSelectedRepresentante($event)">
-        </p-dropdown>
-
-      </div>
-      <div class="col-xs-1 btn-add-representante">
-        <button class="btn-add-repre btn btn-sm btn-success"
-                (click)="editRepresentante()">
-          <clr-icon shape="user"></clr-icon>
-          Edit
-        </button>
+      <div class="col-xs-5">
+        <input class="form-control" id="representante" required
+               name="representante" [(ngModel)]="representante">
       </div>
     </div>
 
@@ -196,11 +186,3 @@
   </section>
 </form>
 
-
-<!--Modal para agregar o editar los datos de un representante-->
-<app-representante *ngIf="modalAddEditRepreOpen"
-                   [representante]="repreSeleccionado"
-                   [isEditRepre]="isEditRepre"
-                   (representanteToUpdate)="addEditRepresentante($event)"
-                   (cancelAddEditRepre)="onCancelAddEditRepresentante($event)">
-</app-representante>
