Cambios en los formularios de orden de trabajo, solicitud repuesto, repuestos

--- a/client-app/src/app/shared/repuesto/repuesto.component.html
+++ b/client-app/src/app/shared/repuesto/repuesto.component.html
@@ -1,7 +1,6 @@
 <!--Modal para agregar o editar los datos de un repuesto-->
 <clr-modal [(clrModalOpen)]="modalRepuestoOpen" [clrModalClosable]="false"
-           [clrModalSize]="'lg'"
-           *ngIf="repuesto">
+           [clrModalSize]="'lg'">
   <h2 class="modal-title form-repuesto-title">{{modalRepuestoTitle}}</h2>
   <div class="modal-body">
     <form class="compact" #repuestoForm="ngForm">
@@ -44,14 +43,14 @@
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-repuesto-label" for="cantidadAd">Cantidad Adquirida:</label>
+            <label class="form-repuesto-label" for="cantidadAd">Cant. Adquirida:</label>
           </div>
           <div class="col-xs-3">
             <input class="form-control" id="cantidadAd"
                    name="cantidadAd" [(ngModel)]="cantAdquirida">
           </div>
           <div class="col-xs-2">
-            <label class="form-repuesto-label" for="cantidadRes">Cantidad Restante:</label>
+            <label class="form-repuesto-label" for="cantidadRes">Cant. Restante:</label>
           </div>
           <div class="col-xs-3">
             <input class="form-control" id="cantidadRes"
@@ -65,8 +64,8 @@
           </div>
           <div class="col-xs-3">
             <div class="select form-control">
-              <select id="selectTipo" #selectedTipo name="selectTipo"
-                      [(ngModel)]="tipoEquipo.id"
+              <select class="select-form-repuesto" id="selectTipo" #selectedTipo name="selectTipo"
+                      [(ngModel)]="tipoEquipo"
                       (change)="onSelectedTipoEquipo(selectedTipo.value)">
                 <option *ngFor="let tipo of tipos"
                         value={{tipo.id}}>{{tipo.tipo}}
@@ -78,10 +77,10 @@
           <div class="col-xs-2">
             <label class="form-repuesto-label">Modelo:</label>
           </div>
-          <div class="col-xs-3" *ngIf="modeloEquipo != null">
+          <div class="col-xs-3">
             <div class="select form-control">
-              <select id="selectModelo" #selectedModelo name="selectModelo"
-                      [(ngModel)]="modeloEquipo.id"
+              <select class="select-form-repuesto" id="selectModelo" #selectedModelo name="selectModelo"
+                      [(ngModel)]="modeloEquipo"
                       (change)="onSelectedModeloEquipo(selectedModelo.value)">
                 <option *ngFor="let modelo of modelos"
                         value={{modelo.id}}>{{modelo.modelo}}, {{modelo.marca}} }}
@@ -93,21 +92,22 @@
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-repuesto-label" for="repre">Representante:</label>
-          </div>
-          <div class="col-xs-3" *ngIf="representante == null">
-            <input class="form-control" id="repre">
-          </div>
-        </div>
-
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-repuesto-label">Foto:</label>
+            <label class="form-repuesto-label" for="representante">Representante:</label>
           </div>
           <div class="col-xs-3">
-
+            <input class="form-control" id="representante"
+                   name="representante" [(ngModel)]="representante">
           </div>
         </div>
+
+<!--        <div class="form-group row flex-items-xs-left">-->
+<!--          <div class="col-xs-2">-->
+<!--            <label class="form-repuesto-label">Foto:</label>-->
+<!--          </div>-->
+<!--          <div class="col-xs-3">-->
+
+<!--          </div>-->
+<!--        </div>-->
       </section>
     </form>
   </div>
