--- a/client-app/src/app/shared/ubicacion/ubicacion.component.html
+++ b/client-app/src/app/shared/ubicacion/ubicacion.component.html
@@ -6,7 +6,7 @@
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-ubicacion-equipo-label" for="servicio">Servicio:</label>
+            <label class="form-ubicacion-equipo-label" for="servicio">Mantenimiento:</label>
           </div>
           <div class="col-xs-4">
             <input class="form-control" id="servicio"
