--- a/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="col-xs-2">
-        <label class="form-order-trabajo-label" for="tipoServicio">Tipo Servicio:</label>
+        <label class="form-order-trabajo-label" for="tipoServicio">Tipo Mantenimiento:</label>
       </div>
       <div class="col-xs-3">
         <input class="form-control" id="tipoServicio"
@@ -32,7 +32,7 @@
         <label class="form-order-trabajo-label">Personal que reporta el problema:</label>
       </div>
       <div class="col-xs-6">
-        <label class="form-order-trabajo-label" for="personal">Descripción del Problema:</label>
+        <label class="form-order-trabajo-label" for="responsable">Descripción del Problema:</label>
       </div>
       <div class="col-xs-4">
         <input class="form-control" id="responsable"
@@ -49,8 +49,8 @@
   </section>
 
   <!-- información del equipo-->
+  <h4 class="form-order-trabajo-sub-title">Información del Equipo</h4>
   <section class="form-block">
-    <h4 class="form-order-trabajo-sub-title">Información del Equipo</h4>
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-1">
         <label class="form-order-trabajo-label" for="nroSerie">N. Serie:</label>
@@ -189,73 +189,84 @@
   <!--    </div>-->
   <!--  </section>-->
 
-  <section>
-    <h4 class="form-order-trabajo-sub-title">Repuestos Solicitados</h4>
 
-    <section class="form-block">
-      <!-- errors -->
-      <div class="alert alert-danger" *ngIf="repError">
-        <div class="alert-items">
-          <div class="alert-item static">
-            <div class="alert-icon-wrapper">
-              <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
-            </div>
-            <span class="alert-text">{{repErrorMessage}}</span>
+  <h4 class="form-order-trabajo-sub-title">Repuestos Solicitados</h4>
+  <section class="form-block">
+    <!-- errors -->
+    <div class="alert alert-danger" *ngIf="repError">
+      <div class="alert-items">
+        <div class="alert-item static">
+          <div class="alert-icon-wrapper">
+            <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
           </div>
+          <span class="alert-text">{{repErrorMessage}}</span>
         </div>
-        <button type="button" class="close" aria-label="Close" (click)="repError = false">
-          <clr-icon aria-hidden="true" shape="close"></clr-icon>
+      </div>
+      <button type="button" class="close" aria-label="Close" (click)="repError = false">
+        <clr-icon aria-hidden="true" shape="close"></clr-icon>
+      </button>
+    </div>
+  </section>
+
+  <section>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-order-trabajo-label">Solicitud Repuesto:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="codigoRep"
+               name="solicitudRepId" #solRepId
+               [(ngModel)]="solicitudRepId">
+      </div>
+      <div class="col-xs-1">
+        <button class="btn btn-sm btn-success"
+                (click)="buscarSolicitudRepuestoById()">
+          <clr-icon shape="search"></clr-icon>
         </button>
       </div>
-    </section>
-
-    <!--    <div class="form-group row flex-items-xs-left">-->
-    <!--      <div class="col-xs-2">-->
-    <!--        <label class="form-order-trabajo-label">Código:</label>-->
-    <!--      </div>-->
-    <!--      <div class="col-xs-2">-->
-    <!--        <input class="form-control" id="codigoRep"-->
-    <!--               name="codigoRep" #codigoRep-->
-    <!--               [(ngModel)]="codigoSolRep">-->
-    <!--      </div>-->
-    <!--      <div class="col-xs-1">-->
-    <!--        <button class="btn btn-sm btn-success"-->
-    <!--                (click)="buscarSolicitudRepuesto()">-->
-    <!--          <clr-icon shape="plus"></clr-icon>-->
-    <!--          Add-->
-    <!--        </button>-->
-    <!--      </div>-->
-    <!--      <div class="col-xs-1">-->
-    <!--        <button class="btn btn-sm btn-success"-->
-    <!--                (click)="crearSolicitudRepuesto()">-->
-    <!--          <clr-icon shape="plus"></clr-icon>-->
-    <!--          Crear-->
-    <!--        </button>-->
-    <!--      </div>-->
-    <!--      <div class="col-xs-1">-->
-    <!--        <button class="btn btn-sm btn-success"-->
-    <!--        *ngIf="selectedRepuesto != null"-->
-    <!--        (click)="editSolicitudRepuesto()">-->
-    <!--        <clr-icon shape="pencil"></clr-icon>-->
-    <!--        Editar-->
-    <!--        </button>-->
-    <!--      </div>-->
-    <!--    </div>-->
-
-    <!--    <clr-datagrid *ngIf="solicitudRepuesto?.repuestos!= null &&-->
-    <!--        solicitudRepuesto?.repuestos.length > 0">-->
-    <!--      <clr-dg-column>Código</clr-dg-column>-->
-    <!--      <clr-dg-column>Descripción</clr-dg-column>-->
-    <!--      <clr-dg-column>Cantidad Adquirida</clr-dg-column>-->
-    <!--      <clr-dg-column>Precio</clr-dg-column>-->
-    <!--      <clr-dg-row *ngFor="let repuesto of solicitudRepuesto?.repuestos">-->
-    <!--        <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>-->
-    <!--        <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>-->
-    <!--        <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>-->
-    <!--        <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>-->
-    <!--      </clr-dg-row>-->
-    <!--    </clr-datagrid>-->
+    </div>
   </section>
+  <section>
+    <button class="btn btn-sm btn-success"
+            (click)="agregarRepuesto()">
+      <clr-icon shape="plus"></clr-icon>
+      Crear
+    </button>
+    <button class="btn btn-sm btn-success"
+            *ngIf="repuestoSeleccionado != null"
+            (click)="editarRepuesto()">
+      <clr-icon shape="pencil"></clr-icon>
+      Editar
+    </button>
+
+    <button class="btn btn-sm btn-success"
+            *ngIf="repuestoSeleccionado != null"
+            (click)="eliminarRepuesto()()">
+      <clr-icon shape="pencil"></clr-icon>
+      Eliminar
+    </button>
+  </section>
+
+
+  <div class="form-group row flex-items-xs-left">
+    <div class="col-xs-12">
+      <clr-datagrid *ngIf="repuestos!= null && repuestos.length > 0">
+        <clr-dg-column>Código</clr-dg-column>
+        <clr-dg-column>Descripción</clr-dg-column>
+        <clr-dg-column>Cantidad Adquirida</clr-dg-column>
+        <clr-dg-column>Precio</clr-dg-column>
+        <clr-dg-row *ngFor="let repuesto of repuestos"
+                    (click)="selectRepuesto(repuesto)"
+                    [class.selectRepuesto]="repuesto === repuestoSeleccionado">
+          <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>
+          <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>
+          <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>
+          <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
+        </clr-dg-row>
+      </clr-datagrid>
+    </div>
+  </div>
+
 
   <section class="form-block">
     <button class="btn btn-sm btn-success"
@@ -272,4 +283,12 @@
     </button>
   </section>
 </form>
+
+<!--Modal para agregar o editar los datos de un repuesto-->
+<app-repuesto *ngIf="modalAddEditRepuestoOpen"
+              [repuesto]="repuestoSeleccionado"
+              [isEditRepuesto]="isEditRepuesto"
+              (repuestoToUpdate)="addEditRepuesto($event)"
+              (cancelAddEditRepuesto)="onCancelAddEditRepuesto($event)">
+</app-repuesto>
 
