--- a/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo/lista-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo/lista-orden-trabajo.component.html
@@ -63,7 +63,7 @@
     <clr-datagrid [clrDgLoading]="loading">
       <clr-dg-column [clrDgSortBy]="'fecha'">Fecha Creación</clr-dg-column>
       <clr-dg-column>Estado</clr-dg-column>
-      <clr-dg-column>Tipo de Servicio</clr-dg-column>
+      <clr-dg-column>Tipo de Mantenimiento</clr-dg-column>
       <clr-dg-column>Diagnostico</clr-dg-column>
       <clr-dg-column>Equipo</clr-dg-column>
       <clr-dg-placeholder>
