--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
@@ -21,31 +21,33 @@
       </div>
     </div>
 
+    <h5 class="form-add-edit-sol-repuesto-sub-title">Repuestos</h5>
     <section>
-      <h6 class="form-add-edit-sol-repuesto-title">Repuestos</h6>
       <div>
         <button class="btn btn-sm btn-success"
                 (click)="addNewRepuesto()">
           <clr-icon shape="plus"></clr-icon>
           Crear
         </button>
-        <button class="btn btn-sm btn-success"
-                *ngIf="repuestoSeleccionado != null"
-                (click)="editRepuesto()">
-          <clr-icon shape="pencil"></clr-icon>
-          Editar
-        </button>
-
-        <button class="btn btn-sm btn-success"
-                *ngIf="repuestoSeleccionado != null"
-                (click)="removeRepuesto()()">
-          <clr-icon shape="pencil"></clr-icon>
-          Eliminar
-        </button>
       </div>
 
       <div class="form-group row flex-items-xs-left">
         <div class="col-xs-12">
+          <section>
+            <button class="btn btn-sm btn-success"
+                    *ngIf="repuestoSeleccionado != null"
+                    (click)="editRepuesto()">
+              <clr-icon shape="pencil"></clr-icon>
+              Editar
+            </button>
+
+            <button class="btn btn-sm btn-success"
+                    *ngIf="repuestoSeleccionado != null"
+                    (click)="eliminarRepuesto()()">
+              <clr-icon shape="pencil"></clr-icon>
+              Eliminar
+            </button>
+          </section>
           <clr-datagrid *ngIf="solicitudRepuesto?.repuestos!= null &&
         solicitudRepuesto?.repuestos.length > 0">
             <clr-dg-column>Código</clr-dg-column>
