--- a/client-app/src/app/shared/repuesto/repuesto.component.css
+++ b/client-app/src/app/shared/repuesto/repuesto.component.css
@@ -6,3 +6,18 @@
 .form-repuesto-label {
   font-weight: bold !important;
 }
+
+.select .select-form-repuesto {
+  border: 1px solid rgba(34, 36, 38, 0.50) !important;
+  border-radius: 0 !important;
+  border-image: initial !important;
+  -webkit-appearance: menulist !important;
+  align-items: center !important;
+  background-color: white !important;
+  cursor: default;
+  background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
+  height: 30px !important;
+  margin-left: 1% !important;
+  width: 100% !important;
+  display: block;
+}
