--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
@@ -1,6 +1,5 @@
 <h2 class="form-add-edit-sol-repuesto-title">Crear Solicitud de Repuestos</h2>
 <form class="compact" #repuestoForm="ngForm">
-  <section class="form-block">
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-1">
         <label class="form-add-edit-repuesto-label" for="estado">Estado:</label>
@@ -14,59 +13,53 @@
         <label class="form-add-edit-repuesto-label" for="fechaSolicitud">Fecha:</label>
       </div>
       <div class="col-xs-2">
-        <input class="form-control" type="date"
-               id="fechaSolicitud"
-               name="fechaSolicitud"
+        <input class="form-control" placeholder="dd/mm/yyyy"
+               id="fechaSolicitud" name="fechaSolicitud"
                [(ngModel)]="fechaSolicitud">
       </div>
     </div>
 
     <h5 class="form-add-edit-sol-repuesto-sub-title">Repuestos</h5>
     <section>
-      <div>
-        <button class="btn btn-sm btn-success"
-                (click)="addNewRepuesto()">
-          <clr-icon shape="plus"></clr-icon>
-          Crear
-        </button>
-      </div>
+      <clr-datagrid>
+        <clr-dg-action-bar>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-secondary"
+                    (click)="addNewRepuesto()">
+              <clr-icon shape="plus"></clr-icon>
+              Agregar
+            </button>
 
-      <div class="form-group row flex-items-xs-left">
-        <div class="col-xs-12">
-          <section>
-            <button class="btn btn-sm btn-success"
+            <button type="button" class="btn btn-sm btn-secondary"
                     *ngIf="repuestoSeleccionado != null"
                     (click)="editRepuesto()">
-              <clr-icon shape="pencil"></clr-icon>
+              <clr-icon shape="plus"></clr-icon>
               Editar
             </button>
-
-            <button class="btn btn-sm btn-success"
-                    *ngIf="repuestoSeleccionado != null"
-                    (click)="eliminarRepuesto()()">
-              <clr-icon shape="pencil"></clr-icon>
+          </div>
+        </clr-dg-action-bar>
+        <clr-dg-column>Código</clr-dg-column>
+        <clr-dg-column>Descripción</clr-dg-column>
+        <clr-dg-column>Cantidad Adquirida</clr-dg-column>
+        <clr-dg-column>Precio</clr-dg-column>
+        <clr-dg-column></clr-dg-column>
+        <clr-dg-row *ngFor="let repuesto of repuestos"
+                    (click)="selectRepuesto(repuesto)"
+                    [class.selectRepuesto]="repuesto === repuestoSeleccionado">
+          <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>
+          <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>
+          <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>
+          <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
+          <clr-dg-cell>
+            <button class="btn btn-sm btn-warning"
+                    (click)="eliminarRepuesto(repuesto)">
               Eliminar
             </button>
-          </section>
-          <clr-datagrid *ngIf="solicitudRepuesto?.repuestos!= null &&
-        solicitudRepuesto?.repuestos.length > 0">
-            <clr-dg-column>Código</clr-dg-column>
-            <clr-dg-column>Descripción</clr-dg-column>
-            <clr-dg-column>Cantidad Adquirida</clr-dg-column>
-            <clr-dg-column>Precio</clr-dg-column>
-            <clr-dg-row *ngFor="let repuesto of solicitudRepuesto?.repuestos"
-                        (click)="selectRepuesto(repuesto)"
-                        [class.selectRepuesto]="repuesto === repuestoSeleccionado">
-              <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>
-              <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>
-              <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>
-              <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
-            </clr-dg-row>
-          </clr-datagrid>
-        </div>
-      </div>
+          </clr-dg-cell>
+        </clr-dg-row>
+      </clr-datagrid>
     </section>
-  </section>
+
   <section class="form-block">
     <button class="btn btn-sm btn-success"
             [disabled]="(repuestoForm.form.invalid )"
