--- a/client-app/src/app/shared/representante/representante.component.html
+++ b/client-app/src/app/shared/representante/representante.component.html
@@ -78,7 +78,7 @@
             (click)="addRepresentante()"
             [disabled]="(repreForm.form.invalid)">
       <clr-icon shape="check"></clr-icon>
-      Crear
+      {{btnTitle}}
     </button>
   </div>
 </clr-modal>
