--- a/client-app/src/app/shared/tipo-equipo/tipo-equipo.component.html
+++ b/client-app/src/app/shared/tipo-equipo/tipo-equipo.component.html
@@ -67,7 +67,7 @@
             (click)="addTipoEquipo()"
             [disabled]="(tipoEquipoForm.form.invalid)">
       <clr-icon shape="check"></clr-icon>
-      Crear
+      {{btnTitle}}
     </button>
   </div>
 </clr-modal>
