--- a/client-app/src/app/shared/ubicacion/ubicacion.component.html
+++ b/client-app/src/app/shared/ubicacion/ubicacion.component.html
@@ -53,7 +53,7 @@
             (click)="addUbicacion()"
             [disabled]="(ubicacionForm.form.invalid)">
       <clr-icon shape="check"></clr-icon>
-      Crear
+      {{btnTitle}}
     </button>
   </div>
 </clr-modal>
